--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: column;
+  background: rgb(81, 169, 228);
+
+  height: 1080px;
 }
 
-.App-link {
-  color: #61dafb;
+.form-part {
+  height: auto;
+  margin-top: 50px;
+  padding: 50px;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.747);
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 0px 22px -9px #000000;
+  box-shadow: 0px 0px 22px -9px #000000;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+  margin-top: 25px !important;
 }
